create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1375,7 +1375,7 @@ body {
 .cid-qMKWdoun0h {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/ruka-2000x1333.jpg");
+  background-image: url("../../../assets/images/4fotolia-62897488-subscription-monthly-xxl-2000x1333.jpg");
 }
 .cid-qMKWdoun0h H1 {
   text-align: center;
@@ -2412,6 +2412,10 @@ body {
 .cid-qL8cVDQiny .mbr-section-btn {
   text-align: left;
   color: #232323;
+}
+.cid-qL8cVDQiny H1 {
+  text-align: left;
+  color: #767676;
 }
 .cid-qMrHLrXaio .navbar {
   padding: .5rem 0;
