create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2432,8 +2432,8 @@ body {
   color: #232323;
 }
 .cid-qL8cVDQiny H1 {
-  text-align: left;
-  color: #767676;
+  text-align: center;
+  color: #232323;
 }
 .cid-qMPLDDOGnD .navbar {
   padding: .5rem 0;
